--- a/rule/pt.yaml
+++ b/rule/pt.yaml
@@ -6,80 +6,96 @@
 #
 
 ---
+pt2:
+  - name: enclosing quotation marks (first level)
+    parts:
+      - \left
+      - ?<!: >-
+          [\pL\d‐-]
+      - ptXqtA1: «
+      - \center: .+?
+      - +dot: >-
+          [.?!]+
+      - ptqtA2: »
+      - ?!: >-
+          [\pL\d‐-]
+      - +EOS:
+      - _?
+      - \right
+
+  - name: enclosing quotation marks (first level)
+    parts:
+      - \left
+      - ?<!: >-
+          [\pL\d‐-]
+      - ptXqtA1: «
+      - \center: .+?
+      - ptqtA2: »
+      - ?!: >-
+          [\pL\d‐-]
+      - _?
+      - \right
+
+  - name: enclosing quotation marks (second level, alternative first level)
+    parts:
+      - \left
+      - ?<!: >-
+          [\pL\d‐-]
+      - ptXqtB1: “
+      - \center: .+?
+      - +dot: >-
+          [.?!]+
+      - ptXqtB2: ”
+      - ?!: >-
+          [\pL\d‐-]
+      - +EOS:
+      - _?
+      - \right
+
+  - name: enclosing quotation marks (second level, alternative first level)
+    parts:
+      - \left
+      - ?<!: >-
+          [\pL\d‐-]
+      - ptXqtB1: “
+      - \center: .+?
+      - ptXqtB2: ”
+      - ?!: >-
+          [\pL\d‐-]
+      - _?
+      - \right
+
+  - name: enclosing quotation marks (third level)
+    parts:
+      - \left
+      - ?<!: >-
+          [\pL\d‐-]
+      - ptXqtB1: ‘
+      - \center: .+?
+      - +dot: >-
+          [.?!]+
+      - ptXqtB2: ’
+      - ?!: >-
+          [\pL\d‐-]
+      - +EOS:
+      - _?
+      - \right
+
+  - name: enclosing quotation marks (third level)
+    parts:
+      - \left
+      - ?<!: >-
+          [\pL\d‐-]
+      - ptXqtB1: ‘
+      - \center: .+?
+      - ptXqtB2: ’
+      - ?!: >-
+          [\pL\d‐-]
+      - _?
+      - \right
+
+
 pt4:
-
-  - name: enclosing quotation marks (first level)
-    parts:
-      - \left
-      - ?<!: \pL
-      - ptXqtA1: «
-      - \center: .+?
-      - +dot: "[.?!]+"
-      - ptqtA2: »
-      - ?!: \pL
-      - +EOS:
-      - _?
-      - \right
-
-  - name: enclosing quotation marks (first level)
-    parts:
-      - \left
-      - ?<!: \pL
-      - ptXqtA1: «
-      - \center: .+?
-      - ptqtA2: »
-      - ?!: \pL
-      - _?
-      - \right
-
-  - name: enclosing quotation marks (second level, alternative first level)
-    parts:
-      - \left
-      - ?<!: \pL
-      - ptXqtB1: “
-      - \center: .+?
-      - +dot: "[.?!]+"
-      - ptXqtB2: ”
-      - ?!: \pL
-      - +EOS:
-      - _?
-      - \right
-
-  - name: enclosing quotation marks (second level, alternative first level)
-    parts:
-      - \left
-      - ?<!: \pL
-      - ptXqtB1: “
-      - \center: .+?
-      - ptXqtB2: ”
-      - ?!: \pL
-      - _?
-      - \right
-
-  - name: enclosing quotation marks (third level)
-    parts:
-      - \left
-      - ?<!: \pL
-      - ptXqtB1: ‘
-      - \center: .+?
-      - +dot: "[.?!]+"
-      - ptXqtB2: ’
-      - ?!: \pL
-      - +EOS:
-      - _?
-      - \right
-
-  - name: enclosing quotation marks (third level)
-    parts:
-      - \left
-      - ?<!: \pL
-      - ptXqtB1: ‘
-      - \center: .+?
-      - ptXqtB2: ’
-      - ?!: \pL
-      - _?
-      - \right
-
   - name: attached pronouns (appended)
     parts:
       - \left
