--- a/rule/en.yaml
+++ b/rule/en.yaml
@@ -6,56 +6,67 @@
 #
 
 ---
+en2:
+  - name: enclosing quotation marks (first level)
+    parts:
+      - \left
+      - ?<!: >-
+          [\pL\d‐-]
+      - enXqtA1: “
+      - \center: .+?
+      - +punct: >-
+          [.?!]+
+      - enXqtA2: ”
+      - ?!: >-
+          [\pL\d‐-]
+      - +EOS:
+      - _?
+      - \right
+
+  - name: enclosing quotation marks (first level)
+    parts:
+      - \left
+      - ?<!: >-
+          [\pL\d‐-]
+      - enXqtA1: “
+      - \center: .+?
+      - enXqtA2: ”
+      - ?!: >-
+          [\pL\d‐-]
+      - _?
+      - \right
+
+  - name: enclosing quotation marks (second level)
+    parts:
+      - \left
+      - ?<!: >-
+          [\pL\d‐-]
+      - enXqtB1: ‘
+      - \center: .+?
+      - +punct: >-
+          [.?!]+
+      - enXqtB2: ’
+      - ?!: >-
+          [\pL\d‐-]
+      - +EOS:
+      - _?
+      - \right
+
+  - name: enclosing quotation marks (second level)
+    parts:
+      - \left
+      - ?<!: >-
+          [\pL\d‐-]
+      - enXqtB1: ‘
+      - \center: .+?
+      - enXqtB2: ’
+      - ?!: >-
+          [\pL\d‐-]
+      - _?
+      - \right
+
+
 en4:
-
-  - name: enclosing quotation marks (first level)
-    parts:
-      - \left
-      - ?<!: \pL
-      - enXqtA1: “
-      - \center: .+?
-      - +punct: "[.?!]+"
-      - enXqtA2: ”
-      - ?!: \pL
-      - +EOS:
-      - _?
-      - \right
-
-  - name: enclosing quotation marks (first level)
-    parts:
-      - \left
-      - ?<!: \pL
-      - enXqtA1: “
-      - \center: .+?
-      - enXqtA2: ”
-      - ?!: \pL
-      - _?
-      - \right
-
-  - name: enclosing quotation marks (second level)
-    parts:
-      - \left
-      - ?<!: \pL
-      - enXqtB1: ‘
-      - \center: .+?
-      - +punct: "[.?!]+"
-      - enXqtB2: ’
-      - ?!: \pL
-      - +EOS:
-      - _?
-      - \right
-
-  - name: enclosing quotation marks (second level)
-    parts:
-      - \left
-      - ?<!: \pL
-      - enXqtB1: ‘
-      - \center: .+?
-      - enXqtB2: ’
-      - ?!: \pL
-      - _?
-      - \right
-
   - name: contraction/elision
     parts:
       - \left
