--- a/rule/ro.yaml
+++ b/rule/ro.yaml
@@ -6,17 +6,19 @@
 #
 
 ---
-ro4:
-
+ro2:
   - name: enclosing quotation marks (first level)
     parts:
       - \left
-      - ?<!: \pL
+      - ?<!: >-
+          [\pL\d‐-]
       - roXqtA1: „
       - \center: .+?
-      - +dot: "[.?!]+"
+      - +dot: >-
+          [.?!]+
       - roXqtA2: ”
-      - ?!: \pL
+      - ?!: >-
+          [\pL\d‐-]
       - +EOS:
       - _?
       - \right
@@ -24,25 +26,31 @@ ro4:
   - name: enclosing quotation marks (first level)
     parts:
       - \left
-      - ?<!: \pL
+      - ?<!: >-
+          [\pL\d‐-]
       - roXqtA1: „
       - \center: .+?
       - roXqtA2: ”
-      - ?!: \pL
+      - ?!: >-
+          [\pL\d‐-]
       - _?
       - \right
 
   - name: enclosing quotation marks (second level)
     parts:
       - \left
-      - ?<!: \pL
+      - ?<!: >-
+          [\pL\d‐-]
       - roXqtB1: «
       - \center: .+?
       - roXqtB2: »
-      - ?!: \pL
+      - ?!: >-
+          [\pL\d‐-]
       - _?
       - \right
 
+
+ro4:
   - name: attached pronouns (prepended)
     parts:
       - \left
