--- a/rule/fr.yaml
+++ b/rule/fr.yaml
@@ -15,7 +15,7 @@ fr2:
       - frXqtA1: «
       - _?
       - \center: >-
-          [^«]+?
+          [^«»]+?
       - +dot: >-
           [.?!]+
       - _?
@@ -34,7 +34,7 @@ fr2:
       - frXqtA1: «
       - _?
       - \center: >-
-          [^«]+?
+          [^«»]+?
       - _?
       - frXqtA2: »
       - ?!: >-
@@ -49,7 +49,8 @@ fr2:
           [\pL\d‐-]
       - frXqtB1: “
       - _?
-      - \center: .+?
+      - \center: >-
+          [^”]+?
       - +dot: >-
           [.?!]+
       - _?
@@ -67,7 +68,8 @@ fr2:
           [\pL\d‐-]
       - frXqtB1: “
       - _?
-      - \center: .+?
+      - \center: >-
+          [^”]+?
       - _?
       - frXqtB2: ”
       - ?!: >-
@@ -82,7 +84,8 @@ fr2:
           [\pL\d‐-]
       - frXqtB1: ‘
       - _?
-      - \center: .+?
+      - \center: >-
+          [^’]+?
       - _?
       - frXqtB2: ’
       - ?!: >-
@@ -97,7 +100,8 @@ fr2:
           [\pL\d‐-]
       - frXqtB1: ‘
       - _?
-      - \center: .+?
+      - \center: >-
+          [^’]+?
       - +dot: >-
           [.?!]+
       - _?
@@ -115,7 +119,8 @@ fr2:
           [\pL\d‐-]
       - frXqtB1: ‹
       - _?
-      - \center: .+?
+      - \center: >-
+          [^›]+?
       - _?
       - frXqtB2: ›
       - ?!: >-
@@ -130,7 +135,8 @@ fr2:
           [\pL\d‐-]
       - frXqtB1: ‹
       - _?
-      - \center: .+?
+      - \center: >-
+          [^›]+?
       - +dot: >-
           [.?!]+
       - _?
