--- a/rule/ca.yaml
+++ b/rule/ca.yaml
@@ -14,7 +14,8 @@ ca2:
           [\pL\d‐-]
       - caXqtA1: «
       - _?
-      - \center: .+?
+      - \center: >-
+          [^»]+?
       - +dot: >-
           [.?!]+
       - _?
@@ -32,7 +33,8 @@ ca2:
           [\pL\d‐-]
       - caXqtA1: «
       - _?
-      - \center: .+?
+      - \center: >-
+          [^»]+?
       - _?
       - caXqtA2: »
       - ?!: >-
@@ -47,7 +49,8 @@ ca2:
           [\pL\d‐-]
       - caXqtB1: “
       - _?
-      - \center: .+?
+      - \center: >-
+          [^”]+?
       - +dot: >-
           [.?!]+
       - _?
@@ -65,7 +68,8 @@ ca2:
           [\pL\d‐-]
       - caXqtB1: “
       - _?
-      - \center: .+?
+      - \center: >-
+          [^”]+?
       - _?
       - caXqtB2: ”
       - ?!: >-
@@ -80,7 +84,8 @@ ca2:
           [\pL\d‐-]
       - caXqtB1: ‘
       - _?
-      - \center: .+?
+      - \center: >-
+          [^’]+?
       - _?
       - caXqtB2: ’
       - ?!: >-
@@ -95,7 +100,8 @@ ca2:
           [\pL\d‐-]
       - caXqtB1: ‘
       - _?
-      - \center: .+?
+      - \center: >-
+          [^’]+?
       - +dot: >-
           [.?!]+
       - _?
