--- a/rule/de.yaml
+++ b/rule/de.yaml
@@ -13,7 +13,8 @@ de2:
       - ?<!: >-
           [\pL\d‐-]
       - deXqtA1: „
-      - \center: .+?
+      - \center: >-
+          [^“]+?
       - +dot: >-
           [.?!]+
       - deXqtA2: “
@@ -29,7 +30,8 @@ de2:
       - ?<!: >-
           [\pL\d‐-]
       - deXqtA1: „
-      - \center: .+?
+      - \center: >-
+          [^“]+?
       - deXqtA2: “
       - ?!: >-
           [\pL\d‐-]
@@ -42,7 +44,8 @@ de2:
       - ?<!: >-
           [\pL\d‐-]
       - deXqtB1: ‚
-      - \center: .+?
+      - \center: >-
+          [^‘]+?
       - +dot: >-
           [.?!]+
       - deXqtB2: ‘
@@ -58,7 +61,8 @@ de2:
       - ?<!: >-
           [\pL\d‐-]
       - deXqtB1: ‚
-      - \center: .+?
+      - \center: >-
+          [^‘]+?
       - deXqtB2: ‘
       - ?!: >-
           [\pL\d‐-]
@@ -71,7 +75,8 @@ de2:
       - ?<!: >-
           [\pL\d‐-]
       - deXqtC1: «
-      - \center: .+?
+      - \center: >-
+          [^»]+?
       - deXqtC2: »
       - ?!: >-
           [\pL\d‐-]
@@ -84,7 +89,8 @@ de2:
       - ?<!: >-
           [\pL\d‐-]
       - deXqtC1: «
-      - \center: .+?
+      - \center: >-
+          [^»]+?
       - +dot: >-
           [.?!]+
       - deXqtC2: »
@@ -100,7 +106,8 @@ de2:
       - ?<!: >-
           [\pL\d‐-]
       - deXqtD1: ‹
-      - \center: .+?
+      - \center: >-
+          [^›]+?
       - +dot: >-
           [.?!]+
       - deXqtD2: ›
@@ -116,7 +123,8 @@ de2:
       - ?<!: >-
           [\pL\d‐-]
       - deXqtD1: ‹
-      - \center: .+?
+      - \center: >-
+          [^›]+?
       - deXqtD2: ›
       - ?!: >-
           [\pL\d‐-]
